# colocationpy

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  barrier_illustration.ipynb  colocation_in_mobility_trajectories.ipynb  env.yml  env_dev.yml  generate_trajectories.py  identify_colocation.py  identify_colocation_abm.py  identify_colocation_epr.py  identify_colocation_epr_noise.py  identify_colocation_epr_noise_repeat.py  initial_data.ipynb  modified_wang.ipynb  pyproject.toml  test.py  testing_projection.ipynb  traj.html  wang2011human.ipynb
.github/workflows/: black.yml  publish.yml  pytest.yml  ruff.yml
colocation/: base_colocation.py  modified_wang_colocation.py  utils.py  wang_colocation.py
colocationpy/: metrics.py  modified_wang_colocation.py  transformation.py  transformations.py  utils.py  wang_colocation.py
data/: data.csv  data1.csv  data2.csv  data3.csv  locations.csv
figures/: colocation_abm.html  colocations.html  leeds_test.html  trajectories_3d.html
src/colocationpy/: __init__.py  metrics.py  transformations.py  utils.py
tests/: test_metrics.py  test_transformations.py  test_utils.py
