[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colocationpy"
version = "0.1.7"
description = "Tools for co-location analysis: metrics, transforms, and utilities."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["co-location", "spatial", "mobility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "numpy~=1.26",
  "pandas~=2.2",
  "scipy~=1.11",
  "pandera~=0.18",
  "networkx~=3.2",
  "shapely~=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ksuchak1990/colocationpy/"
Issues = "https://github.com/ksuchak1990/colocationpy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colocationpy = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = []
