[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colocationpy"
version = "0.1.8"
description = "Tools for co-location analysis: metrics, transforms, and utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Keiran Suchak" }]
keywords = ["co-location", "spatial", "mobility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=2.1,<3.0",
  "scipy>=1.14.1,<2.0",
  "networkx>=3.4,<4.0",
  "pandas>=2.3.3",
  "geopandas>=1.1.2",
  "shapely<2.1.0",
  "pandera>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ksuchak1990/colocationpy/"
Issues = "https://github.com/ksuchak1990/colocationpy/issues"
DOI = "https://doi.org/10.5281/zenodo.17176568"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colocationpy = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
